[package]
name = "gasless"
version = "0.1.0"
edition = "2021"
authors = ["Sawyer Cutler <sawyer@dirtroa.dev>", "Manuel Barbas"]
description = "Gasless Transactions in Rust for SKALE Network"
readme = "README.md"
homepage = "https://eidolon.gg"
repository = "https://github.com/Eidolon-Labs/gasless-rs"
license = "MIT"
keywords = ["blockchain", "skale", "evm", "gasless", "eidolon"]

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = { version = "6.1.0", features = ["default"] }
alloy-primitives = "1.1.0"
alloy-sol-types = "1.1.0"
sha3 = "0.10.8"
rand = "0.8.5"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
node-bindgen = { version = "6.1.0", default-features = false, features = ["build"] }